--- a/css/index.css
+++ b/css/index.css
@@ -1,64 +1,100 @@
 .header {
-    overflow: hidden;
-    background-color: #000000;
-    padding: 10px 10px;
-  }
-  
+  overflow: hidden;
+  background-color: #000000;
+  padding: 10px 10px;
+}
 
+.header a {
+  float: left;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.header a.logo {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  color: rgb(255, 0, 0);
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
   .header a {
-    float: left;
-    color:rgb(255, 255, 255);
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    float: none;
+    display: block;
+    text-align: left;
   }
-  
-  .header a.logo {
-    font-size: 50px;
-    font-weight: bold;
-  }
-  
-  .header a:hover {
-   color: rgb(255, 0, 0);
-  }
-  
-  .header a.active {
-    background-color: dodgerblue;
-    color: white;
-  }
-  
   .header-right {
-    float: right;
+    float: none;
   }
-  
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      float: none;
-    }
-  }
-  .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(0, 0, 0);
-    color: white;
-    text-align: center;
-    font-family: Nunito;
- }
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  text-align: center;
+  font-family: Nunito;
+}
 
- body { 
-   background-image: url(/imagens/stardust-milky-way-starry-sky-space-wallpaper-preview.jpg);
-   background-repeat: no-repeat;
-   background-size: cover;
-  
- }
+body {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.inserir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+  line-height: 30px;
+}
+
+#texto {
+  font-family: Nunito;
+  justify-content: center;
+  flex-direction: row;
+  color: white;
+  font-size: large;
+  padding: 10px;
+  margin-right: 20px;
+}
+
+#date {
+  border-radius: 10px;
+  padding: 5px;
+  margin-right: 20px;
+}
+
+#botao {
+  font-family: Nunito;
+  background-color: black;
+  color: white;
+  border-style: dotted;
+  border-radius: 35px;
+  padding: 15px;
+  font-size: 15px;
+}
+
+
