--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,7 @@
 }
 
 body {
+  background-image: url(/imagens/stardust-milky-way-starry-sky-space-wallpaper-preview.jpg);
   background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
@@ -95,6 +96,34 @@ body {
   border-radius: 35px;
   padding: 15px;
   font-size: 15px;
+}
+
+.explicafoto {
+  
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    margin: 50px 50px;
+
+}
+
+.titulo { 
+
+    display: flex;
+    justify-content: center;
+    width: 50%;
+
+}
+
+.descricao { 
+  color: rgb(255, 255, 255);
+  font-family: 'Nunito', sans-serif;
+  font-size: 18px;
+  line-height: 150%;
+  size: 80%;
 }
 
 
